crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__more_operands.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 65
        },
        "end": {
          "line": 0,
          "character": 66
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [i32, i32] at the end",
      "data": [
        8,
        66,
        [
          "i32",
          "i32"
        ]
      ]
    }
  ]
}
