crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__stacked_type_mismatch_from_instr_sig.snap
---
source: crates/service/tests/diagnostics/typeck/mod.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 9,
          "character": 8
        },
        "end": {
          "line": 9,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32], found [i32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 8,
                "character": 8
              },
              "end": {
                "line": 8,
                "character": 18
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 8,
                "character": 8
              },
              "end": {
                "line": 8,
                "character": 18
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 15
        },
        "end": {
          "line": 9,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 9,
                "character": 8
              },
              "end": {
                "line": 9,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 8
        },
        "end": {
          "line": 13,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32], found [i32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 12,
                "character": 8
              },
              "end": {
                "line": 12,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 8
              },
              "end": {
                "line": 11,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 15
        },
        "end": {
          "line": 13,
          "character": 16
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 13,
                "character": 8
              },
              "end": {
                "line": 13,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    }
  ]
}
